k8s/base/tracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracker
  namespace: adtech
  labels:
    app: tracker
spec:
  selector:
    app: tracker
  ports:
    - name: http
      port: 8083
      targetPort: 8083
